--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -28,5 +29,10 @@ body {
   background-repeat: no-repeat;
   color: var(--neutral-1);
   font-family: 'Work Sans', sans-serif;
+}
 
+.App{
+  max-width: 1440px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
