--- a/src/components/botton/Viewbtn.css
+++ b/src/components/botton/Viewbtn.css
@@ -1,13 +1,33 @@
-.viewbtn{
-    padding: 0.5rem 1rem;
-    border: 2px solid var(--neutral-1);
-    width: fit-content;
-    border-radius: 1.5rem;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+.viewbtn {
+  padding: 0.5rem 1rem;
+  border: 2px solid var(--neutral-1);
+  width: fit-content;
+  border-radius: 1.5rem;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  text-decoration: none;
+  color: var(--neutral-1);
+  font-weight: 200;
+  margin-right: 2rem;
 }
 
-.viewbtn:hover{
-    background: var(--primary);
-    padding: 0.5rem 1.5rem;
+.viewbtn:hover {
+  background: var(--primary);
+  padding: 0.5rem 1.5rem;
+}
+
+.viewbtn:hover i {
+  animation: arrow 2s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
