--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -1,5 +1,5 @@
 .cover {
-  max-width: 280px;
+  width: 280px;
   height: 408px;
   background-color: #D9D9D9;
   border-radius: 1.5rem;
@@ -10,4 +10,5 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: left;
 }
