--- a/src/pages/styles/SkillsPage.css
+++ b/src/pages/styles/SkillsPage.css
@@ -5,8 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10rem;
-  padding: 1rem;
+  padding: 1rem 1rem 4rem;
 }
 
 .title-skills {
