--- a/src/pages/styles/ContactPage.css
+++ b/src/pages/styles/ContactPage.css
@@ -11,7 +11,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
 }
 
 .contact-title {
@@ -183,6 +182,9 @@ input,
     text-align: center;
     font-size: 50px;
   }
+  .about__text p{
+    font-size: 17px;
+  }
 
   .contact-content {
     width: 100%;
@@ -198,4 +200,5 @@ input,
     width: 100%;
     margin: 1rem 0 2rem;
   }
+  
 }
