--- a/src/pages/styles/ContactPage.css
+++ b/src/pages/styles/ContactPage.css
@@ -4,6 +4,11 @@ form {
 
 a {
   text-decoration: none;
+  color: var(--neutral-1);
+}
+
+.email:hover{
+  color: rgb(61, 215, 84);
 }
 
 .contact-container {
